fix: wrapped up landing page, sign in, sign up

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 10;
+  z-index: 1;
   transition: 1s all;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
@@ -44,10 +44,12 @@
   height: 100vh;
   display: grid;
   place-items: center;
+  overflow: scroll;
+  z-index: 999;
 }
 
 .modal{
   background-color: var(--color-background-darker);
-  z-index: 11;
+  z-index: 2;
 }
 
