--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -6,11 +6,16 @@
 }
 
 .landing-page>header{
+    z-index: 1;
+    position: sticky;
+    top: 0;
     height: 3rem;
     min-height: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--color-background);
+    border-bottom: 1px solid var(--color-background-darker);
 }
 
 .landing-page>header>span{
